It's also the language.

--- a/docs/cpp/index.yml
+++ b/docs/cpp/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Landing
-title: C++ documentation
+title: C++ language documentation
 summary: Learn to use C++ and the C++ standard library.
 
 metadata:
