--- a/docs/cross-platform/toc.yml
+++ b/docs/cross-platform/toc.yml
@@ -1,16 +1,16 @@
 - name: Cross-platform mobile development with C++
-# Auto-expanded node
   href: ../cross-platform/index.yml
 - name: Overview
   href: ../cross-platform/visual-cpp-for-cross-platform-mobile-development.md 
 - name: Get Started
-# Auto-expanded node
+  expanded: true
   items:
   - name: Install cross-platform mobile development with C++
     href: ../cross-platform/install-visual-cpp-for-cross-platform-mobile-development.md
   - name: Install and configure tools to build using iOS
     href: ../cross-platform/install-and-configure-tools-to-build-using-ios.md
 - name: Tutorials
+  expanded: true
   items:
   - name: Create an Android Native Activity app
     href: ../cross-platform/create-an-android-native-activity-app.md
