Update C language index and TOC

--- a/docs/c-runtime-library/toc.yml
+++ b/docs/c-runtime-library/toc.yml
@@ -1,4 +1,4 @@
-- name: C Run-time library (CRT) reference
+- name: C runtime library (CRT) reference
   href: ../c-runtime-library/c-run-time-library-reference.md
 - name: CRT library features
   expanded: false
