--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -879,6 +879,15 @@
           href: ../standard-library/multiset-class.md
     - name: <shared_mutex>
       href: ../standard-library/shared-mutex.md
+    - name: <span>
+      expanded: false
+      items: 
+        - name: <span>
+          href: ../standard-library/span.md
+        - name: <span> functions
+          href: ../standard-library/span-functions.md
+        - name: span class
+          href: ../standard-library/span-class.md
     - name: <sstream>
       expanded: false
       items: 
