--- a/docs/standard-library/toc.yml
+++ b/docs/standard-library/toc.yml
@@ -122,6 +122,12 @@
           href: ../standard-library/charconv.md
         - name: <charconv> functions
           href: ../standard-library/charconv-functions.md
+        - name: chars_format
+          href: ../standard-library/chars-format-enum-charconv.md
+        - name: from_chars_result
+          href: ../standard-library/from-chars-result-structure.md
+        - name: to_chars_result
+          href: ../standard-library/to-chars-result-structure.md
       - name: <chrono>
       expanded: false
       items: 
