--- a/docs/linux/toc.yml
+++ b/docs/linux/toc.yml
@@ -44,8 +44,12 @@
         href: ../linux/prop-pages/remote-ar-linux.md
 - name: Build Linux projects with CMake in Visual Studio
   items:
-  - name: Create and configure a Linux CMake project
+  - name: Create a Linux CMake project
     href: ../linux/cmake-linux-project.md
+  - name: Configure a Linux CMake project
+    href: ../linux/cmake-linux-configure.md
+  - name: Debug a Linux CMake project
+    href: ../linux/cmake-linux-debug.md
   - name: "Tutorial: Create C++ cross-platform projects in Visual Studio"
     href: ../build/get-started-linux-cmake.md
 - name: Configure Linux projects to use Address Sanitizer
