add getbufferptr and associated enum (#3005)
* add getbufferptr and associated enum

* acrolinx

* writing tuneup

* acrolinx

* add buffercommand enum to toc

* added metadata

* fix toc. sentence casing

* nits

* Update buffercommand-enumeration.md

Added comma to raise Acrolinx score

Co-authored-by: Tyler Whitney <Tyler.Whitney@microsoft.com>
Co-authored-by: Shannon Leavitt <V-SHLEAV@microsoft.com>

--- a/docs/mfc/toc.yml
+++ b/docs/mfc/toc.yml
@@ -2706,6 +2706,8 @@
           href: reference/afx-messages.md
         - name: ToolBar control styles
           href: reference/toolbar-control-styles.md
+        - name: BufferCommand enumeration
+          href: reference/buffercommand-enumeration.md
         - name: "CMFCImagePaintArea::IMAGE_EDIT_MODE enumeration"
           href: reference/cmfcimagepaintarea-image-edit-mode-enumeration.md
         - name: UICheckState enumeration
