--- a/docs/linux/toc.yml
+++ b/docs/linux/toc.yml
@@ -14,9 +14,9 @@
   items:
   - name: Create a MSBuild Linux project
     href: ../linux/create-a-new-linux-project.md
-  - name: Configure a MSBuild Linux project
+  - name: Configure a Linux MSBuild project
     href: ../linux/configure-a-linux-project.md
-  - name: Deploy, run, and debug your MSBuild Linux project
+  - name: Deploy, run, and debug your Linux MSBuild project
     href: ../linux/deploy-run-and-debug-your-linux-project.md
   - name: Linux Project Property Page reference
     items:
@@ -44,12 +44,10 @@
         href: ../linux/prop-pages/remote-ar-linux.md
 - name: Build Linux projects with CMake in Visual Studio
   items:
-  - name: Create a CMake Linux project
+  - name: Create a Linux CMake project
     href: ../linux/cmake-linux-project.md
-  - name: Configure a CMake Linux project
+  - name: Configure a Linux CMake project
     href: ../linux/cmake-linux-configure.md
-  - name: Debug a CMake Linux project
-    href: ../linux/cmake-linux-debug.md
   - name: "Tutorial: Create C++ cross-platform projects in Visual Studio"
     href: ../build/get-started-linux-cmake.md
 - name: Configure Linux projects to use Address Sanitizer
