--- a/docs/c-runtime-library/toc.yml
+++ b/docs/c-runtime-library/toc.yml
@@ -63,7 +63,9 @@
     - name: CRT initialization
       href: ../c-runtime-library/crt-initialization.md
     - name: Global state in the CRT
-      href: ../c-runtime-library/global-state.md 
+      href: ../c-runtime-library/global-state.md
+    - name: Type-generic math
+      href: ../c-runtime-library/tgmath.md 
 - name: Universal C runtime routines by category
   expanded: false
   items: 
