Adding new contexts to TOC.

--- a/docs/code-quality/toc.yml
+++ b/docs/code-quality/toc.yml
@@ -802,3 +802,17 @@
     href: ../code-quality/c28350.md
   - name: C28351
     href: ../code-quality/c28351.md
+  - name: C33001
+    href: ../code-quality/c33001.md
+  - name: C33004
+    href: ../code-quality/c33004.md
+  - name: C33005
+    href: ../code-quality/c33005.md
+  - name: C33010
+    href: ../code-quality/c33010.md
+  - name: C33011
+    href: ../code-quality/c33011.md
+  - name: C33020
+    href: ../code-quality/c33020.md
+  - name: C33022
+    href: ../code-quality/c33022.md
