New preprocessor is new

--- a/docs/preprocessor/toc.yml
+++ b/docs/preprocessor/toc.yml
@@ -5,7 +5,7 @@
   items: 
     - name: Preprocessor
       href: ../preprocessor/preprocessor.md
-    - name: Experimental preprocessor overview
+    - name: New preprocessor overview
       href: ../preprocessor/preprocessor-experimental-overview.md                  
     - name: Phases of translation
       href: ../preprocessor/phases-of-translation.md
