C11/C17 /std support and SDK install docs (#3140)
* C11/C17 /std support and SDK install docs

* Acrolinx pass

* touch

* Fix typos

* Add predefined macros for C11/C17

* Expand on supported standards

* Add keywords

* fix table issues

* add qualification

* Updates per review

* Add message text

* en-us locale is required!

--- a/docs/overview/toc.yml
+++ b/docs/overview/toc.yml
@@ -15,6 +15,8 @@
       href: ../overview/supported-platforms-visual-cpp.md
     - name: C++ Tools and Features in Visual Studio Editions
       href: ../overview/visual-cpp-tools-and-features-in-visual-studio-editions.md
+    - name: Install C11 and C17 support in Visual Studio
+      href: ../overview/install-c17-support.md
     - name: Samples
       href: ../overview/visual-cpp-samples.md
     - name: Help and community
