--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -8,7 +8,7 @@
       "locale": "en-us",
       "monikers": [],
       "moniker_ranges": [
-        ">= vs-2015"
+        ">= msvc-140"
       ],
       "xref_query_tags": ["/dotnet", "/uwp/api"],
       "open_to_public_contributors": true,
