--- a/docs/c-language/toc.yml
+++ b/docs/c-language/toc.yml
@@ -270,6 +270,8 @@
                 href: ../c-language/string-literals-in-primary-expressions.md
               - name: Expressions in parentheses
                 href: ../c-language/expressions-in-parentheses.md
+              - name: Generic selections (C11)
+                href: ../c-language/generic_selection.md
           - name: L-value and r-value expressions
             href: ../c-language/l-value-and-r-value-expressions.md
           - name: C constant expressions
