commit so I can merge master

--- a/docs/c-language/toc.yml
+++ b/docs/c-language/toc.yml
@@ -138,6 +138,8 @@
         href: ../c-language/name-spaces.md
   - name: Declarations and types
     items: 
+      - name: Alignment
+        href: ../c-language/alignment.md
       - name: Declarations and types
         href: ../c-language/declarations-and-types.md
       - name: Overview of declarations
