Better link for contributing to docs.

--- a/docs/overview/toc.yml
+++ b/docs/overview/toc.yml
@@ -7,7 +7,7 @@
       href: ../overview/overview-of-cpp-development.md
     - name: What's new for C++ in Visual Studio
       href: ../overview/what-s-new-for-visual-cpp-in-visual-studio.md
-    - name: What's new in Microsoft C++ docs 
+    - name: What's new for Microsoft C++ docs 
       href: ../overview/whats-new-cpp-docs.md
     - name: C++ conformance improvements in Visual Studio
       href: ../overview/cpp-conformance-improvements.md
