Add linker option, hubpage, TOC

--- a/docs/_breadcrumb/toc.yml
+++ b/docs/_breadcrumb/toc.yml
@@ -58,6 +58,9 @@
     - name: Code analysis
       tocHref: /cpp/code-quality/
       topicHref: /cpp/code-quality/index
+    - name: Code sanitizers
+      tocHref: /cpp/sanitizers/
+      topicHref: /cpp/sanitizers/index
     - name: C++ language
       tocHref: /cpp/cpp/
       topicHref: /cpp/cpp/index
