Fix review blockers

--- a/docs/sanitizers/index.yml
+++ b/docs/sanitizers/index.yml
@@ -25,7 +25,7 @@ landingContent:
       - linkListType: tutorial
         links:
           - text: AddressSanitizer shadow bytes
-            url: ./asan-shadowbytes.md
+            url: ./asan-shadow-bytes.md
           - text: AddressSanitizer cloud or distributed testing
             url: ./asan-offline-crash-dumps.md
 
