Add documentation for warning C26457 (#3421)
* add documentation for C26457

* update warning page and add entry to table of contents.

* Update c26457.md

* Delete unneeded metadata

Co-authored-by: Colin Robertson <corob@microsoft.com>

--- a/docs/code-quality/toc.yml
+++ b/docs/code-quality/toc.yml
@@ -137,6 +137,8 @@
     href: ../code-quality/c26455.md
   - name: C26456
     href: ../code-quality/c26456.md
+  - name: C26457
+    href: ../code-quality/c26457.md
   - name: C26460
     href: ../code-quality/c26460.md
   - name: C26461
