capitilization for C runtime

--- a/docs/c-runtime-library/toc.yml
+++ b/docs/c-runtime-library/toc.yml
@@ -64,7 +64,7 @@
       href: ../c-runtime-library/global-state.md
     - name: Type-generic math
       href: ../c-runtime-library/tgmath.md 
-    - name: C Runtime (CRT) and C++ Standard Library .lib files
+    - name: C runtime (CRT) and C++ Standard Library .lib files
       href: ../c-runtime-library/crt-library-features.md
 - name: Universal C runtime routines by category
   expanded: false
