--- a/docs/overview/toc.yml
+++ b/docs/overview/toc.yml
@@ -5,12 +5,16 @@
       href: ../overview/visual-cpp-in-visual-studio.md
     - name: Overview of C++ development in Visual Studio
       href: ../overview/overview-of-cpp-development.md
-    - name: What's new for C++ in Visual Studio
+    - name: What's new for C++ in Visual Studio 2019
       href: ../overview/what-s-new-for-visual-cpp-in-visual-studio.md
+    - name: What's new for C++ in Visual Studio 2017
+      href: ../overview/what-s-new-for-cpp-2017.md
     - name: What's new for Microsoft C++ docs 
       href: ../overview/whats-new-cpp-docs.md
-    - name: C++ conformance improvements in Visual Studio
+    - name: C++ conformance improvements in Visual Studio 2019
       href: ../overview/cpp-conformance-improvements.md
+    - name: C++ conformance improvements in Visual Studio 2017
+      href: ../overview/cpp-conformance-improvements-2017.md
     - name: Microsoft C++ language conformance
       href: ../overview/visual-cpp-language-conformance.md
     - name: Supported target platforms
