--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -203,6 +203,8 @@
       href: compiler-errors-1/fatal-error-c1088.md
     - name: fatal error C1089
       href: compiler-errors-1/fatal-error-c1089.md
+    - name: fatal error C1090
+      href: compiler-errors-1/fatal-error-c1090.md
     - name: fatal error C1091
       href: compiler-errors-1/fatal-error-c1091.md
     - name: fatal error C1092
